# RPG_Battle

./: Battle.cpp  Battle.h  CMakeLists.txt  Character.cpp  Character.h  CharacterFactory.h  Equipment.h  GameInitialization.cpp  GameInitialization.h  GameWindow.cpp  GameWindow.h  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  Menu.cpp  Menu.h  Skill.cpp  Skill.h  SkillTarget.h  SkillType.h  SkillsManager.cpp  SkillsManager.h  Table.cpp  main.cpp
save/: Mage.txt  Priest.txt  Warrior.txt
save/template/: Mage.txt  Priest.txt  Warrior.txt
